--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,3 +28,8 @@
 @import "./about-us/quality";
 /* headquartersection */
 @import "./about-us/headquarter";
+// subscribe section
+// subscribe section
+@import "./subscribe-page/sub-hero";
+@import "./subscribe-page/sub-howit";
+@import "./subscribe-page/aside"
