--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,4 +32,5 @@
 // subscribe section
 @import "./subscribe-page/sub-hero";
 @import "./subscribe-page/sub-howit";
-@import "./subscribe-page/aside"
+@import "./subscribe-page/aside";
+@import "./subscribe-page/sub-cards";
