--- a/scss/subscribe-page/_aside.scss
+++ b/scss/subscribe-page/_aside.scss
@@ -1,3 +1,50 @@
 .menu__section {
-     margin-top: 168px;
+	margin-top: 80px;
+
+	display: flex;
+	justify-content: space-around;
+
+	&__aside {
+		margin-top: 108px;
+		width: 255px;
+
+		.menu__list {
+			@extend %display-t-s;
+			gap: 24px;
+
+			list-style: none;
+			&__item {
+				width: 223px;
+
+				@extend %displays;
+				justify-content: flex-start;
+				gap: 24px;
+
+				.menu__text {
+					// @extend %titles;
+					font-family: "fraunces";
+					font-weight: 900;
+					font-size: 24px;
+					line-height: 32px;
+
+					color: rgba(51, 61, 75, 0.5);
+
+					&:hover,
+					&:focus {
+						cursor: pointer;
+
+						color: rgba(51, 61, 75, 0.8);
+					}
+					&:active {
+						font-size: 25px;
+					}
+				}
+			}
+			&__line {
+				background: #83888f;
+				mix-blend-mode: normal;
+				opacity: 0.25;
+			}
+		}
+	}
 }
